--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}Treasure Chest{% endblock %}</title>
+  <title>{% block title %}Media Website{% endblock %}</title>
 </head>
 <body>
   <main>
